# cblp-github-io

./: .gitignore  Templates.hs  _config.yml  archive.html  build.hs  cblp-github-io.cabal  cv.html  deploy.sh  feed.xml  index.html  params.json  site.hs
Local/: Hakyll.hs  Prelude.hs
_drafts/: welcome-to-jekyll.markdown
_includes/: head.html
_posts/: 2014-08-25-hello-world.md  2014-08-25-zebra.md  2014-09-14-courseworks.md  2014-10-07-welcome-to-jekyll.markdown
css/: default.css
posts/: 2014-08-25-hello-world.html  2014-08-25-hello-world.md  2014-08-25-zebra.html  2014-08-25-zebra.md  2014-09-14-courseworks.html  2014-09-14-courseworks.md
templates/: Archive.html  Content.html  Default.html  Page.html  PostList.html  PostPage.html  PostWidget.html  archive.html  default.html  post-list.html  postPage.html
