name:                   cblp-github-io
version:                0
build-type:             Simple
cabal-version:          >= 1.10

executable site
    main-is:            site.hs
    build-depends:      base        >= 4.7.0    && < 4.8
                    ,   binary      >= 0.7.1    && < 0.8
                    ,   containers  >= 0.5.5    && < 0.6
                    ,   hakyll      >= 4.6.4    && < 4.7
    ghc-options:        -threaded -Wall -Werror
    default-language:   Haskell2010
